--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@img-comparison-slider/react": "^8.0.2",
     "@next/env": "^16.1.4",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "emailjs-com": "^3.2.0",
     "lucide-react": "^0.563.0",
     "next": "16.0.10",
     "react": "19.2.1",
